# materios

./: .dockerignore  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
cert-daemon/: Dockerfile  docker-compose.external.yml  e2e_test.py
cert-daemon/daemon/: cert_daemon.py  locator_registry.py
cert-daemon/docs/: verification-guide.md
cert-daemon/schemas/: registry.json
cert-daemon/scripts/: verify.py
cert-daemon/tests/: test_blob_verifier.py  test_cert_builder.py  test_merkle.py
chain-spec/: chain-spec-raw.json
docs/: ARCHITECTURE.md  AVAILABILITY_CERT_SPEC.md  CANONICALIZATION.md  GOVERNANCE.md  OPERATOR_KIT.md  RUNBOOK.md  SPO_REWARDS.md
midnight/: PROOF_DEMO.md  docker-compose.yml  package.json
midnight/client/: package.json  tsconfig.json
midnight/client/src/: deploy.ts  proveRiskThreshold.ts  providers.ts  query.ts  submitClaim.ts  submitCommitment.ts  utils.ts
midnight/contracts/: audit-claims.compact
node/src/: main.rs  main_chain_follower.rs  rpc.rs
pallets/motra/primitives/: Cargo.toml
pallets/motra/primitives/src/: lib.rs
pallets/motra/rpc/: Cargo.toml
pallets/motra/rpc/src/: lib.rs
pallets/motra/src/: benchmarking.rs  fee.rs  tests.rs  weights.rs
pallets/orinq-receipts/primitives/: Cargo.toml
pallets/orinq-receipts/primitives/src/: lib.rs
pallets/orinq-receipts/rpc/: Cargo.toml
pallets/orinq-receipts/src/: benchmarking.rs  integration_tests.rs  lib.rs  tests.rs  types.rs
partnerchain/: Cargo.toml  Dockerfile  rust-toolchain.toml
partnerchain/node/: Cargo.toml
partnerchain/node/src/: chain_spec.rs  chain_spec_preprod.rs  cli.rs  command.rs  inherent_data.rs  main.rs  main_chain_follower.rs  rpc.rs  service.rs
partnerchain/pallets/billing/: Cargo.toml
partnerchain/pallets/billing/src/: lib.rs  tests.rs  types.rs  weights.rs
partnerchain/pallets/motra/: Cargo.toml
partnerchain/pallets/motra/primitives/: Cargo.toml
partnerchain/pallets/motra/rpc/: Cargo.toml
partnerchain/pallets/motra/src/: fee.rs  lib.rs  tests.rs  types.rs  weights.rs
partnerchain/pallets/orinq-receipts/: Cargo.toml
partnerchain/pallets/orinq-receipts/rpc/src/: lib.rs
partnerchain/pallets/orinq-receipts/src/: integration_tests.rs  lib.rs  tests.rs  types.rs  weights.rs
partnerchain/pallets/tee-attestation/: Cargo.toml  README.md
partnerchain/pallets/tee-attestation/src/: lib.rs  test_vectors.rs  tests.rs  types.rs  verifier.rs
partnerchain/runtime/: Cargo.toml
partnerchain/runtime/src/: committee_liveness.rs  fee_router.rs  input_sanity.rs  lib.rs  migrations.rs  no_op_charge.rs
partnerchain/runtime/src/tests/: fee_router.rs  mod.rs  motra_only_fees.rs  spo_integration_tests.rs  tee_attestation_integration.rs  treasury_drip_migration.rs  treasury_integration.rs  vesting_schedule.rs
runtime/: Cargo.toml
runtime/src/: input_sanity.rs  lib.rs
runtime/src/tests/: block_weights_throughput.rs  intent_settlement_max_batch.rs  intent_settlement_threshold.rs  mod.rs  motra_only_fees.rs  spo_integration_tests.rs  treasury_drip_migration.rs  vesting_schedule.rs
tools/explorer/: Dockerfile  app.py  cache.py  chain.py  requirements.txt  test_committee_binding.py
tools/explorer/static/: app.js  index.html  style.css
tools/materios-verify/: README.md  pyproject.toml  setup.cfg
tools/materios-verify/examples/: sample-receipts.json
tools/materios-verify/materios_verify/: __init__.py  cli.py  core.py
tools/receipt-builder/: package-lock.json  package.json  tsconfig.json
tools/receipt-builder/examples/: trace.jsonl
tools/receipt-builder/src/: canonicalize.ts  chunker.ts  compress.ts  encrypt.ts  index.ts  manifest.ts  pipeline.ts  receipt.ts  types.ts
tools/receipt-builder/src/hash/: merkle.ts  poseidon.ts  sha256.ts
tools/receipt-builder/tests/: pipeline.test.ts
